<resources>
    <string name="app_name">FXbox</string>
    <string name="favorite_btn">Favorite</string>
    <string name="search">Search</string>
    <string name="download">Shorts Downloader</string>
    <string name="paste">Paste</string>
    <string name="confirm_download">Start download</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="data_recovery_setting">Restore</string>
    <string name="data_recovery_summary_setting">Restore previous data including description, user, music name,...</string>
    <string name="reset_password_setting">Reset password</string>
    <string name="reset_password_summary_setting">Reset your password in private list</string>
    <string name="edt_download_string">Paste link here</string>
    <string name="allow_access_title">Request permission</string>
    <string name="allow_access_content">For playing videos in this app, you have to allow for accessing all
video in your device. Allow access and we are ready to go.</string>
    <string name="positive_button">Open setting</string>
    <string name="all_filter">All</string>
    <string name="name_filter">Name</string>
    <string name="folder_filter">Folder or User</string>
    <string name="display_setting">Display</string>
    <string name="theme_setting">Theme</string>
    <string name="theme_summary_setting">Choose your theme color</string>
    <string name="shuffle_video_setting">Shuffle video</string>
    <string name="shuffle_video_summary_on_setting">Shuffle all</string>
    <string name="shuffle_video_summary_off_setting">Not shuffle video</string>
    <string name="scan_setting">Scan</string>
    <string name="dark_mode_setting">Dark mode</string>
    <string name="dark_mode_summary_on_setting">Dark mode is on</string>
    <string name="dark_mode_summary_off_setting">Dark mode is off</string>
    <string name="play_in_background_setting">Play in background</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="video_maximum_duration_setting">Video max duration</string>
    <string name="video_maximum_duration_summary_setting">Maximum duration of video when scanning (under 15 minutes)</string>
    <string name="minute">minute</string>
    <string name="is_empty">Empty list</string>
    <string name="download_no_watermark">Download without watermark</string>
    <string name="download_music">Download music</string>
    <string name="player_setting">Player</string>
    <string name="set_up_password">Set up your password</string>
    <string name="data_recovery_confirm">Are you sure you want to restore ?.</string>
    <string name="download_option">Download option</string>
    <string name="short_player_downloader">Short</string>
    <string name="link_not_valid">Url not valid</string>
    <string name="downloaded">Downloaded</string>
    <string name="contains_music_from">Contains music from</string>
    <string name="view_more">View more</string>
    <string name="view_less">View less</string>
    <string name="rename">Rename</string>
    <string name="invalid_filename">The file name could not contain / * ? \ : ! </string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="ago">ago</string>
    <string name="weeks">weeks</string>
    <string name="value_invalid" translatable="false">The value must be in the range of 1 > 15 minutes</string>
    <string name="retrieving_data">Retrieving data</string>
    <string name="trying_sever">Trying server</string>
    <string name="name_exists">This name exists</string>
    <string name="invalid_name">The name is empty</string>
    <string name="move">Move to</string>
    <string name="pass_do_not_match">Password Do Not Match</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="data">Data</string>
    <string name="music_player">Music player</string>
    <string name="always_download_video">Always download video</string>
    <string name="allow_access_btn">Allow Access</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_shorts">Shorts</string>
    <string name="nav_download">Download</string>
    <string name="nav_setting">Setting</string>
    <string name="account_nav">Account</string>
    <string name="category_all">All</string>
    <string name="category_shorts">Shorts</string>
    <string name="category_storage">Storage</string>
    <string name="category_song">Song</string>
    <string name="download_nav">Add</string>
    <string name="paste_all">Paste All</string>
    <string name="download_desc">Your downloads are here</string>
    <string name="download_title">Downloader</string>
    <string name="download_is_waiting">Waiting for download…</string>
    <string name="download_is_waiting_network">Waiting for network…</string>
    <string name="download_is_failed">Download failed</string>
    <string name="download_is_success">Downloaded successfully</string>
    <string name="fxplayer_is_running">Background player is running</string>
    <string name="search_results_found"> Results found from </string>
    <string name="comments">Comments</string>
    <string name="comments_is_none">There are no comments yet</string>
    <string name="download_comments">Download</string>
    <string name="cannot_get_comments">Could not get comment for this video</string>
    <string name="server_errol">Server error</string>
    <string name="try_again">Try again</string>
    <string name="load_more">Load more</string>
    <string name="replies">Replies</string>
    <string name="view_more_replies">View %d replies</string>
    <string name="replies_is_none">There are no replies yet</string>
    <string name="comment_digg_count_default">0</string>
    <string name="is_get_data_from_server">Getting data from server</string>
    <string name="get_data_success">Get data successfully</string>
    <string name="get_data_img_failed">Extract image resources failed</string>
    <string name="get_server_data_failed">Failed to get response from server</string>
    <string name="get_data_api_failed">Extract API data failed</string>
    <string name="getting_data_img">Extracting image resources…</string>
    <string name="getting_data_api">Extracting data information…</string>
    <string name="download_bot_summary">Click paste button to start download</string>
    <string name="author">·Author</string>
    <string name="following_count">%1$s Following</string>
    <string name="follower_count">%1$s Followers</string>
    <string name="user_name">User Name: %1$s</string>
    <string name="total_favorited">Total Favorited: %1$s</string>
    <string name="signature">Signature: %1$s</string>
    <string name="user_unique_id">ID: @%1$s</string>
    <string name="video_count"> %1$d video</string>
    <string name="user_video_list_of">"List video of %1$s"</string>
    <string name="history_text">Recently viewed</string>
    <string name="favorite_list">Favorite list</string>
    <string name="playlist_text">Playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="sync_data">Synchronize data</string>
    <string name="limit_list">Limited list</string>
    <string name="profile_following_count">Following</string>
    <string name="profile_follower_count">Follower</string>
    <string name="profile_total_favorited">Favorite</string>
    <string name="copy_to_clip_successfully">Copy successfully</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="enter_search_content">Enter search content</string>
    <string name="failed">Failed</string>
    <string name="data_exists">This media already exists</string>
    <string name="for_you">For you</string>
    <string name="clear_download_item_cache">Item download has been cleared</string>
    <string name="action_mute">Mute</string>
    <string name="action_capture">Video frame Capture</string>
    <string name="action_auto_swipe">Turn on mode auto swipe</string>
    <string name="action_limit">Limit this media</string>
    <string name="action_see_properties">Properties</string>
    <string name="action_export">Export to device folder</string>
    <string name="action_push_to_desktop">Upload to server</string>
    <string name="push_to_desktop_success">Successfully upload to server</string>
    <string name="push_to_desktop_error">Upload to server failed</string>
    <string name="export_success">Exported to %1$s</string>
    <string name="export_failed">Cannot export this media</string>
    <string name="export_slideshow">Export slideshow</string>
    <string name="export_music">Export music</string>
    <string name="export_images">Select images to export</string>
    <string name="select_images_to_export">Select images to export</string>
    <string name="export_selected_images">Export selected</string>
    <string name="select_at_least_one_image">Select at least one image</string>
    <string name="back">Back</string>
    <string name="export_images_success">Exported %1$d images to %2$s</string>
    <string name="action_unmute">Unmute</string>
    <string name="cloud">Cloud</string>
    <string name="connect_errol">Cannot connect to server, please try again later</string>
    <string name="tap_to_try_again">Tap again to retry</string>
    <string name="warn_limit_action">Limited media will not appear in For You tab. Are you sure you want to limit this media?</string>
    <string name="action_unlimit">Remove limit</string>
    <string name="action_disable_auto_swipe">Auto swipe off</string>
    <string name="action_enter_window_video_mode">Enter floating video window mode</string>
    <string name="cannot_enter_video_window_mode">Cannot enter video window mode because permission was not granted</string>
    <string name="limited_success">The media has been limited successfully!</string>
    <string name="remove_limited_success">The media limit has been removed successfully!</string>
    <string name="action_sync_data">Synchronize data (likes, comments,…)</string>
    <string name="action_delete">"Delete this media "</string>
    <string name="warn_delete_action">Are you sure to delete this media ?</string>
    <string name="delete_successfully">The media has been deleted</string>
    <string name="delete_failed">Cannot delete this media</string>
    <string name="empty">empty</string>
    <string name="please_wait">Waiting...</string>
    <string name="photo">Photo</string>
    <string name="warn_do_not_attempt">The actions in this video are performed by professionals or supervised by professionals. Do not attempt.</string>
    <string name="warn_before_viewing">This video may contain disturbing content. Viewer discretion is advised.</string>
    <string name="capcut_desc">CapCut · Try this template</string>
    <string name="cannot_launch_acitivity">Error while launching activity</string>
    <string name="is_sync_data">Synchronizing data</string>
    <string name="description_hint">The playlist\'s description</string>
    <string name="limit_video">Limited video</string>
    <string name="limit_warning">This video is limited. Do you still want to watch it?</string>
    <string name="still_view">Still Watching</string>
    <string name="create_segment_title">Create playback segment</string>
    <string name="segment_name_hint">Segment name</string>
    <string name="save_segment">Save segment</string>
</resources>