<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home_nav"
        android:title="@string/nav_home"
        android:tooltipText=""
        android:icon="@drawable/home_nav"
        app:showAsAction="always" />
    <item android:id="@+id/shorts_nav"
        android:title="@string/nav_shorts"
        android:tooltipText=""
        app:showAsAction="always"
        android:icon="@drawable/shorts_nav" />
    <item android:id="@+id/add_nav"
        android:title="@string/download_nav"
        android:tooltipText=""
        app:showAsAction="always"
        android:icon="@drawable/add_nav" />
    <item android:id="@+id/library_nav"
        android:title="@string/nav_library"
        android:tooltipText=""
        app:showAsAction="always"
        android:icon="@drawable/library_nav" />
    <item android:id="@+id/account_nav"
        android:title="@string/account_nav"
        android:tooltipText=""
        app:showAsAction="always"
        android:icon="@drawable/account_nav" />
</menu>