<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/ac_playlist_thumbnail_container"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ac_playlist_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ac_playlist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tiktok_display_medium"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/ac_playlist_thumbnail_container"
        app:layout_constraintTop_toBottomOf="@+id/ac_playlist_thumbnail_container" />

    <TextView
        android:id="@+id/ac_playlist_video_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/tiktok_display_medium"
        android:padding="6dp"
        android:textColor="@color/rgb_230"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/ac_playlist_name"
        app:layout_constraintTop_toBottomOf="@+id/ac_playlist_name" />

    <TextView
        android:id="@+id/ac_playlist_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paste_btn_bg"
        android:fontFamily="@font/tiktok_text_bold"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/shuffle"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ac_playlist_description"
        app:layout_constraintEnd_toEndOf="@+id/ac_playlist_thumbnail_container"
        app:layout_constraintTop_toTopOf="@+id/ac_playlist_name" />

    <com.vtstudio.fxbox.fxviews.textview.FxExpandableTextView
        android:id="@+id/ac_playlist_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/rounded_corner_16dp_rgb48"
        android:hint="@string/description_hint"
        android:padding="6dp"
        android:textColor="@color/rgb_240"
        app:collapseTextButton="@string/view_less"
        app:expandTextButton="@string/view_more"
        app:highlightTitleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ac_playlist_video_count"
        app:layout_constraintTop_toBottomOf="@+id/ac_playlist_video_count" />

</androidx.constraintlayout.widget.ConstraintLayout>