<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/limit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/rgb_24_a95">

    <ImageView
        android:id="@+id/limit_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/limit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tiktok_display_medium"
        android:gravity="center_horizontal"
        android:text="@string/limit_video"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/limit_icon"
        app:layout_constraintStart_toStartOf="@+id/limit_icon"
        app:layout_constraintTop_toBottomOf="@+id/limit_icon" />

    <TextView
        android:id="@+id/limit_subtext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/tiktok_display_medium"
        android:text="@string/limit_warning"
        android:textColor="@color/rgb_145"
        android:textSize="13.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/try_again_background_drw"
        android:fontFamily="@font/tiktok_display_medium"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/still_view"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_subtext" />

</androidx.constraintlayout.widget.ConstraintLayout>