<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context=".activity.AllowAccess">

    <androidx.cardview.widget.CardView
        android:id="@+id/allow_icon"
        android:layout_width="240dp"
        android:layout_height="170dp"
        android:layout_marginBottom="400dp"
        android:background="@color/transparent"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/allow_permission"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/allow_access_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/allow_access_title"
        android:textColor="@color/white_240"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/allow_icon"
        app:layout_constraintStart_toStartOf="@+id/allow_icon"
        app:layout_constraintTop_toBottomOf="@+id/allow_icon" />

    <TextView
        android:id="@+id/allow_access_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:padding="10dp"
        android:text="@string/allow_access_content"
        android:textColor="@color/white_a85"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/allow_access_title"
        app:layout_constraintStart_toStartOf="@+id/allow_access_title"
        app:layout_constraintTop_toBottomOf="@+id/allow_access_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allow_access"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/corner_btn_primary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/allow_access_btn"
        android:textColor="@color/white_a60"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>