<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:padding="6dp"
    android:paddingBottom="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_black_red_dark"
            android:paddingBottom="8dp">

            <View
                android:id="@+id/indicator"
                android:layout_width="36dp"
                android:layout_height="4dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_corner_rect_180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:text="@string/create_segment_title"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/indicator" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/media_segment_title_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/base_edit_text_background"
                android:hint="@string/segment_name_hint"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/rgb_180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/segment_range_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="18dp"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/media_segment_title_edt"
                app:rsb_mode="range"
                app:rsb_progress_color="@color/fx_label_color"
                app:rsb_thumb_height="18dp"
                app:rsb_thumb_width="18dp" />

            <TextView
                android:id="@+id/start_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/rgb_240"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/segment_range_slider" />

            <TextView
                android:id="@+id/end_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/rgb_240"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/segment_range_slider" />

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/rgb_240"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_time_txt" />

            <TextView
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/save_segment"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/end_time_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
