<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/indicator"
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner_rect_180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/tiktok_display_regular"
        android:gravity="center_vertical"
        android:text="@string/comments"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator" />

    <FrameLayout
        android:id="@+id/bottom_sheet_list_comment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_list_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.vtstudio.fxbox.fxviews.progressbar.FxLoadingView
            android:id="@+id/bottom_sheet_loading_comment"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottom_sheet_comment_is_none_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/bottom_sheet_comment_is_none_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/tiktok_display_medium"
                android:text="@string/comments_is_none"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_comment_download_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/try_again_background_drw"
                android:fontFamily="@font/tiktok_display_medium"
                android:gravity="center"
                android:padding="6dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/download_comments"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>